K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rfp-backend
  labels:
    app: rfp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rfp-backend
  template:
    metadata:
      labels:
        app: rfp-backend
    spec:
      containers:
        - name: backend
          image: asia-south1-docker.pkg.dev/rfpintplatform/rfp-repo/backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
