K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: rfp-backend
  ports:
    - port: 80
      targetPort: 8000
